2015-08-03  Jacob Fenton  <bocajnotnef@gmail.com>

   * tests/test_counting_single.py: removed redundant test

2015-08-01  Jacob Fenton  <bocajnotnef@gmail.com> and Titus Brown
<titus@idyll.org>

   * scripts/normalize-by-median.py,khmer/khmer_logger.py: added logging
   framework, prototyped in normalize-by-median; added -q/--quiet to
   * tests/test_normalize_by_median.py: associated tests.
   * khmer/khmer_args.py: Made info function use logging functions.
   * tests/khmer_tst_utils.py: removed info reporting in runscript from 'out'
   returned.

2015-08-01  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/kfile.py: added infrastructure for doing compressed output
   * khmer/thread_utils.py: switched threaded_sequence_processor to make use of
   write_record
   * scripts/{extract-long-sequences,extract-paired-reads,
   extract-partitions,fastq-to-fasta,filter-abund-single,filter-abund,
   interleave-reads,normalize-by-median,sample-reads-randomly,
   split-paired-reads,trim-low-abund}.py: added output compression
   * tests/{test_functions,test_scripts,test_normalize_by_median}.py: added
   tests
   * scripts/{load-graph,partition-graph,find-knots.py,
   make-initial-stoptags}.py,oxli/build_graph.py: made load-graph no longer
   add .pt to graph outfiles, changed partition-graph to not expect .pt's
   * doc/whats-new-2.0.rst: doc'd changes to load-graph and partition-graph
   * doc/dev/scripts-and-sandbox.rst: updated scripts/ requirements.

2015-08-01  Sherine Awad  <drmahmoud@ucdavis.edu>

   * sandbox/multi-rename.py: updated output of long FASTA sequences to
   wrap text at 80 characters.
   * tests/test_sandbox_scripts.py: Added a test for multi-rename.py.

2015-07-31  Kevin Murray  <spam@kdmurray.id.au>

   * lib/Makefile,Makefile,lib/*.pc.in,lib/test-compile.cc: Misc debian-based
   compatibility changes
   * lib/get_version.py: Add crunchbang, chmod +x

2015-07-29  Michael R. Crusoe  <crusoe@ucdavis.edu>
